DuPont DevSB/src/objects/Reason__c.object
<CustomObject>
    <fields>
        <fullName>Description_rtf__c</fullName>
        <description>Rich text long description</description>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <description>This field get populated via the fHeirarchy field.</description>
        <label>Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsSelectable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Can Select. Add as a selectable node in the treeview and autocomplete control.</description>
        <label>IsSelectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OwningOrg__c</fullName>
        <description>just at root level</description>
        <label>Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-A&amp;HF</fullName>
                </value>
                <value>
                    <fullName>DPT-AFS</fullName>
                </value>
                <value>
                    <fullName>DPT-Agriculture</fullName>
                </value>
                <value>
                    <fullName>DPT-Air and Filtration</fullName>
                </value>
                <value>
                    <fullName>DPT-ASPS</fullName>
                </value>
                <value>
                    <fullName>DPT-Automotive</fullName>
                </value>
                <value>
                    <fullName>DPT-Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Cleanroom/Pharma</fullName>
                </value>
                <value>
                    <fullName>DPT-Covers</fullName>
                </value>
                <value>
                    <fullName>DPT-Critical Clean</fullName>
                </value>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DPT-Envelopes</fullName>
                </value>
                <value>
                    <fullName>DPT-ES</fullName>
                </value>
                <value>
                    <fullName>DPT-Graphics</fullName>
                </value>
                <value>
                    <fullName>DPT-Ind Pkg &amp; Protection</fullName>
                </value>
                <value>
                    <fullName>DPT-Mechanical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Fabrics</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Specialties</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>DPT-Optical</fullName>
                </value>
                <value>
                    <fullName>DPT-PM</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-ER</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-LE</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-MIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent</description>
        <label>Parent Reason</label>
        <referenceTo>Reason__c</referenceTo>
        <relationshipLabel>Reason</relationshipLabel>
        <relationshipName>Reason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReasonId__c</fullName>
        <description>Short Name of Reason</description>
        <externalId>true</externalId>
        <inlineHelpText>Short Name of Reason</inlineHelpText>
        <label>Reason Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonL1__c</fullName>
        <description>This gets copied from the fReasonL1__c formula field on change.</description>
        <label>Reason L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonL2__c</fullName>
        <description>This gets copied from the fReasonL2__c formula field on change.</description>
        <label>Reason L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonL3__c</fullName>
        <description>This gets copied from the fReasonL3__c formula field on change.</description>
        <label>Reason L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Root Reason</description>
        <label>Root</label>
        <referenceTo>Reason__c</referenceTo>
        <relationshipLabel>Reasons (Root)</relationshipLabel>
        <relationshipName>Root</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <description>SIC Code</description>
        <label>SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <description>TextArea(255) description</description>
        <inlineHelpText>TextArea(255) description</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StdHierarchy__c</fullName>
        <description>This field get populated via the fStdHeirarchy__c field.</description>
        <label>Std Hierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StdReasonL1__c</fullName>
        <description>This gets copied from the fStdReasonL1__c formula field on change.</description>
        <label>Std Reason L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdReasonL2__c</fullName>
        <description>This gets copied from the fStdReasonL2__c formula field on change.</description>
        <label>Std Reason L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdReasonL3__c</fullName>
        <description>This gets copied from the fStdReasonL3__c formula field on change.</description>
        <label>Std Reason L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdSIC__c</fullName>
        <description>DupontOne SIC</description>
        <label>Std SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Reason,  visible at root level (0)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>Unique Name used to Identify a root node.</description>
        <inlineHelpText>Unique Name used to Identify a root node.</inlineHelpText>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fHierarchy__c</fullName>
        <formula>IF(fLevel__c==0,&apos;root&apos;, 
IF(fLevel__c==1,Name,
IF(fLevel__c==2,Parent__r.Name+&quot;&gt;&quot;+ Name,
IF(fLevel__c==3,Parent__r.Parent__r.Name+&quot;&gt;&quot;+Parent__r.Name+&quot;&gt;&quot;+ Name,
IF(fLevel__c==4,Parent__r.Parent__r.Parent__r.Name+&quot;&gt;&quot;+Parent__r.Parent__r.Name+&quot;&gt;&quot;+Parent__r.Name+&quot;&gt;&quot;+ Name,
&quot;&gt;Error: Too many ancestors&gt;&quot;
)))))</formula>
        <label>Hierarchy (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fLevel__c</fullName>
        <description>Max out at Level 3.</description>
        <formula>IF( Parent__c==&quot;&quot;,0,
IF(Parent__r.Parent__c==&quot;&quot;,1,
IF(Parent__r.Parent__r.Parent__c==&quot;&quot;,2,
IF(Parent__r.Parent__r.Parent__r.Parent__c==&quot;&quot;,3
,4
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level (fx)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fOwningOrg__c</fullName>
        <description>inherited from root</description>
        <formula>BLANKVALUE(TEXT(OwningOrg__c), 
BLANKVALUE(TEXT(Parent__r.OwningOrg__c), 
BLANKVALUE(TEXT(Parent__r.Parent__r.OwningOrg__c),
TEXT(Parent__r.Parent__r.Parent__r.OwningOrg__c)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Owning Org (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fReasonName__c</fullName>
        <description>Reason Type - Root Reason</description>
        <formula>CASE(fLevel__c,0,Name,
1,Parent__r.Name,
2,Parent__r.Parent__r.Name,
3,Parent__r.Parent__r.Parent__r.Name,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Name (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSIC__c</fullName>
        <formula>BLANKVALUE(SIC__c,
BLANKVALUE(Parent__r.SIC__c,
BLANKVALUE(Parent__r.Parent__r.SIC__c,
Parent__r.Parent__r.Parent__r.SIC__c
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason SIC (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fStdHierarchy__c</fullName>
        <formula>IF(NOT(ISNULL(primaryReason__c)),primaryReason__r.fHierarchy__c,
Parent__r.primaryReason__r.fHierarchy__c)</formula>
        <label>Std Hierarchy (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fStdSIC__c</fullName>
        <formula>primaryReason__r.fSIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Std Reason SIC (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fType__c</fullName>
        <description>Inherited Type (max 5 levels)</description>
        <formula>BLANKVALUE(TEXT(Type__c), 
BLANKVALUE(TEXT(Parent__r.Type__c), 
BLANKVALUE(TEXT(Parent__r.Parent__r.Type__c),
TEXT(Parent__r.Parent__r.Parent__r.Type__c)
)))</formula>
        <inlineHelpText>Inherited Type</inlineHelpText>
        <label>Reason Type (fx)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>&apos;One DuPont&apos; equivalent Reason,  Required for cross SBU reporting,  incentive for user base is to inherent specified standard such as SIC, NAICS, etc..</description>
        <inlineHelpText>The &apos;One DuPont&apos; equivalent Reason</inlineHelpText>
        <label>Std Reason</label>
        <referenceTo>Reason__c</referenceTo>
        <relationshipLabel>BU-Free Reasons</relationshipLabel>
        <relationshipName>Reason1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reason</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ReasonId__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UniqueName__c</columns>
        <columns>Type__c</columns>
        <columns>OwningOrg__c</columns>
        <columns>Parent__c</columns>
        <columns>IsSelectable__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BI_NA_Env_Tech_Reasons</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Root__c</columns>
        <columns>ReasonL1__c</columns>
        <columns>ReasonL2__c</columns>
        <columns>ReasonL3__c</columns>
        <columns>OwningOrg__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Root__c</field>
            <operation>equals</operation>
            <value>BI-NA Env Tech Reasons</value>
        </filters>
        <label>BI-NA Env Tech Reasons</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BINA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_NA_Surf_Tech_Reasons</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Root__c</columns>
        <columns>ReasonL1__c</columns>
        <columns>ReasonL2__c</columns>
        <columns>OwningOrg__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Root__c</field>
            <operation>equals</operation>
            <value>BI-NA Surf Tech Reasons</value>
        </filters>
        <label>BI-NA Surf Tech Reasons</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BINA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPT_AP_Convertor_Case_Root_Reasons</fullName>
        <columns>NAME</columns>
        <columns>fLevel__c</columns>
        <columns>ReasonL1__c</columns>
        <columns>ReasonL2__c</columns>
        <columns>Parent__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fReasonName__c</field>
            <operation>equals</operation>
            <value>DPT AP Converter Case - Root Reasons</value>
        </filters>
        <label>DPT AP Converter Case - Root Reasons</label>
        <language>en_US</language>
        <sharedTo>
            <group>APEngagementLeader</group>
            <roleAndSubordinatesInternal>DPTAP</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DPT_Case_Mgmt_Reasons</fullName>
        <columns>Parent__c</columns>
        <columns>fHierarchy__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>IsSelectable__c</columns>
        <columns>OwningOrg__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fOwningOrg__c</field>
            <operation>contains</operation>
            <value>DPT</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Reason__c.Reason</value>
        </filters>
        <label>DPT Case Mgmt Reasons</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>DuPontProtectionTechnologies</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Reason Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reasons</pluralLabel>
    <recordTypes>
        <fullName>Reason</fullName>
        <active>true</active>
        <label>Reason</label>
    </recordTypes>
    <recordTypes>
        <fullName>Root_Reason</fullName>
        <active>true</active>
        <description>Root Reason contains more required fields which the child can inherit</description>
        <label>Root Reason</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>